
Mon Mar 1 17:12:24 CET 2010 Paolo Molaro <lupus@ximian.com>

	* src/unicode-data.h, src/gutf8.c: don't export private symbols.

2009-12-03  Zoltan Varga  <vargaz@gmail.com>

	* src/gmisc-unix.c (g_get_user_name): Avoid returning NULL if the env
	var is not set.

2009-10-15 Andreia Gaita <avidigal@novell.com>

	* src/gptrarray.c: implement g_ptr_array_remove_index_fast
	* src/glib.h: fix g_ptr_array_remove_index_fast declaration
	* test/ptrarray.c: new tests

2009-10-15 Andreia Gaita <avidigal@novell.com>

	* src/garray.c: (g_array_remove_index_fast) only move 1 element
	and not the whole shebang

2009-09-26 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* test/queue.c: new tests.
	* src/gqueue.c: fixed pop_head.

2009-09-26 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* src/gqueue.c: add g_queue_push_tail.

2009-06-20  Zoltan Varga  <vargaz@gmail.com>

	* src/glib.h: Add GUINT32_FROM/TO_BE macros.

2009-06-09  Jonathan Chambers <joncham@gmail.com>
	
	* CMakeLists.txt: Add start of CMake build.
	* src/CMakeLists.txt: Add start of CMake build.
	
	Contribution is licensed as MIT/X11.

2009-06-02  Bill Holmes  <billholmes54@gmail.com>

	* src/gpath.c (g_find_program_in_path):  While searching on Windows
	  also try additional suffixes .exe, .cmd, .bat, and.com.

	Contributed under MIT/X11 license.

2009-05-27  Geoff Norton  <gnorton@novell.com>

	* src/gfile-posix.c: Fix g_get_current_dir on amd64

2009-04-22  Jeffrey Stedfast  <fejj@novell.com>

	* src/gtimer-win32.c (g_timer_elapsed): Avoid re-querying freq by
	just saving it in a static variable. Also modified microseconds
	calculation to avoid overflow.

2009-04-05  Miguel de Icaza  <miguel@novell.com>

	* src/gpath.c: Avoid situations where we add the separator if one
	of the elements is the separator.

2009-04-02  Miguel de Icaza  <miguel@novell.com>

	* src/gpath.c: If the first element is NULL, return an empty
	string. 

2009-02-19 Gonzalo Paniagua Javier <gonzalo@novell.com>
