@@ -90,3 +90,13 @@ g_log (const gchar *log_domain, GLogLevelFlags log_level, const gchar *format, .
 	va_end (args);
 }
 
+void
+g_assertion_message (const gchar *format, ...)
+{
+	va_list args;
+
+	va_start (args, format);
+	g_logv (G_LOG_DOMAIN, G_LOG_LEVEL_ERROR, format, args);
+	va_end (args);
+}
+
